Archive2/f0/3bf160bac91022/output
main.cpp:1:2: error: invalid preprocessing directive #define_REENTRANT
 #define_REENTRANT
  ^
main.cpp:3:19: fatal error: thread.h: No such file or directory
 #include<thread.h>
                   ^
compilation terminated.
